; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_bio.c_nfs_buf_drop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_bio.c_nfs_buf_drop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsbuf = type { i32 }

@NBL_BUSY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"nfs_buf_drop: buffer not busy!\00", align 1
@NBL_WANTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_buf_drop(%struct.nfsbuf* %0) #0 {
  %2 = alloca %struct.nfsbuf*, align 8
  %3 = alloca i32, align 4
  store %struct.nfsbuf* %0, %struct.nfsbuf** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.nfsbuf*, %struct.nfsbuf** %2, align 8
  %5 = getelementptr inbounds %struct.nfsbuf, %struct.nfsbuf* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @NBL_BUSY, align 4
  %8 = call i64 @ISSET(i32 %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = call i32 @panic(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  %13 = load %struct.nfsbuf*, %struct.nfsbuf** %2, align 8
  %14 = getelementptr inbounds %struct.nfsbuf, %struct.nfsbuf* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @NBL_WANTED, align 4
  %17 = call i64 @ISSET(i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %12
  %21 = load %struct.nfsbuf*, %struct.nfsbuf** %2, align 8
  %22 = getelementptr inbounds %struct.nfsbuf, %struct.nfsbuf* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @NBL_BUSY, align 4
  %25 = load i32, i32* @NBL_WANTED, align 4
  %26 = or i32 %24, %25
  %27 = call i32 @CLR(i32 %23, i32 %26)
  %28 = load i32, i32* %3, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %20
  %31 = load %struct.nfsbuf*, %struct.nfsbuf** %2, align 8
  %32 = call i32 @wakeup(%struct.nfsbuf* %31)
  br label %33

33:                                               ; preds = %30, %20
  ret void
}

declare dso_local i64 @ISSET(i32, i32) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @CLR(i32, i32) #1

declare dso_local i32 @wakeup(%struct.nfsbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
